Updated page Basic Part Design Tutorial 019/cs

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -285,7 +285,7 @@
 <li>Ukon&#269;ete n&aacute;stroj.</li>
 <li>Pou&#382;ijte tyto vazby:
 <ol><li>Vyberte jednu z vodorovn&yacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Vazbu horizont&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te hodnotu <b>7 mm</b>.</li>
-<li>Vyberte jednu ze svisl&yacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te tento v&yacute;raz: <b><code>&lt;&lt;Sketch&gt;&gt;.Constraints.sirka</code></b>.</li>
+<li>Vyberte jednu ze svisl&yacute;ch lini&iacute;, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vazbu vertik&aacute;ln&iacute; vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te tento v&yacute;raz: <b><code>&lt;&lt;Sketch&gt;&gt;.Constraints.vyska</code></b>.</li>
 <li>Vyberte bod v <b>lev&eacute;m horn&iacute;m</b> rohu vytvo&#345;en&eacute;ho obd&eacute;ln&iacute;ku (ozna&#269;en&yacute; jako <b>TL</b> na <b>Obr.: SD1</b>) a nov&#283; p&#345;idan&yacute; bod vn&#283;j&scaron;&iacute; geometrie a pou&#382;ijte vazbu <span typeof="mw:File"><a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazbu toto&#382;nosti</a>.</li></ol></li>
 <li>N&aacute;&#269;rt by nyn&iacute; m&#283;l b&yacute;t zcela zavazben.</li>
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</li></ol>
@@ -409,12 +409,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120202649
+Cached time: 20260120210147
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.275 seconds
-Real time usage: 0.375 seconds
+CPU time usage: 0.256 seconds
+Real time usage: 0.448 seconds
 Preprocessor visited node count: 830/1000000
 Post&#8208;expand include size: 41775/2097152 bytes
 Template argument size: 11581/2097152 bytes
@@ -425,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.888      1 -total
- 26.51%   13.757      1 Template:PartDesign_Tools_navi/cs
- 19.03%    9.876      1 Template:Sketcher_Tools_navi/cs
- 15.90%    8.249      3 Template:Navigation_menu_2
- 14.06%    7.294      1 Template:Userdocnavi/cs
-  7.20%    3.735      5 Template:Clear
-  6.04%    3.133      7 Template:ComboBox
-  5.38%    2.789      3 Template:CheckBox
-  5.05%    2.621      1 Template:TutorialInfo
-  4.20%    2.181     19 Template:Button
+100.00%   56.895      1 -total
+ 22.89%   13.023      1 Template:PartDesign_Tools_navi/cs
+ 14.31%    8.141      3 Template:CheckBox
+ 13.66%    7.771      1 Template:Sketcher_Tools_navi/cs
+ 12.11%    6.891      1 Template:Userdocnavi/cs
+ 11.86%    6.746      3 Template:Navigation_menu_2
+  7.29%    4.150      1 Template:TutorialInfo
+  7.29%    4.149      8 Template:KEY
+  5.55%    3.158      7 Template:ComboBox
+  4.68%    2.664     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120202649 and revision id 1741704. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120210146 and revision id 1741707. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
