Created page with "# Vyberte '''Sketch003'''. # Klikněte na [[File:PartDesign_Pad.svg|24px|link=PartDesign_Pad]] [[PartDesign_Pad|Deska]]: ## Přiřaďte '''Typ = ''' {{ComboBox|Rozměr}}. ## Přiřaďte '''Délka= 16.7 mm'''  ## Klikněte na {{Button|OK}}. # Měli byste získat výsledek, jak je znázorněno na '''Obr.: SD2'''"

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -291,12 +291,12 @@
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</li></ol>
 <p><b><big>Pad001</big></b>
 </p>
-<ol><li>Select <b>Sketch003</b>.</li>
-<li>Click <span typeof="mw:File"><a href="../PartDesign_Pad.html" title="PartDesign Pad"><img src="../File/PartDesign_Pad.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Pad</a>:
-<ol><li>Assign <b>Type = </b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dimension  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>.</li>
-<li>Assign <b>Length = 16.7 mm</b></li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
-<li>You should have a result as shown in <b>Fig: SD2</b></li></ol>
+<ol><li>Vyberte <b>Sketch003</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_Pad.html" title="PartDesign Pad"><img src="../File/PartDesign_Pad.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a>:
+<ol><li>P&#345;i&#345;a&#271;te <b>Typ = </b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Rozm&#283;r  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>.</li>
+<li>P&#345;i&#345;a&#271;te <b>D&eacute;lka= 16.7 mm</b></li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
+<li>M&#283;li byste z&iacute;skat v&yacute;sledek, jak je zn&aacute;zorn&#283;no na <b>Obr.: SD2</b></li></ol>
 <p><b><big>Mirrored001</big></b>
 </p>
 <ol><li>Select <b>Pad001</b>.</li>
@@ -409,15 +409,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120210147
+Cached time: 20260120210700
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.448 seconds
+CPU time usage: 0.250 seconds
+Real time usage: 0.344 seconds
 Preprocessor visited node count: 830/1000000
-Post&#8208;expand include size: 41775/2097152 bytes
-Template argument size: 11581/2097152 bytes
+Post&#8208;expand include size: 41769/2097152 bytes
+Template argument size: 11575/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -425,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.895      1 -total
- 22.89%   13.023      1 Template:PartDesign_Tools_navi/cs
- 14.31%    8.141      3 Template:CheckBox
- 13.66%    7.771      1 Template:Sketcher_Tools_navi/cs
- 12.11%    6.891      1 Template:Userdocnavi/cs
- 11.86%    6.746      3 Template:Navigation_menu_2
-  7.29%    4.150      1 Template:TutorialInfo
-  7.29%    4.149      8 Template:KEY
-  5.55%    3.158      7 Template:ComboBox
-  4.68%    2.664     19 Template:Button
+100.00%   47.190      1 -total
+ 20.91%    9.868      1 Template:Userdocnavi/cs
+ 20.38%    9.618      1 Template:Sketcher_Tools_navi/cs
+ 19.10%    9.013      1 Template:PartDesign_Tools_navi/cs
+ 15.25%    7.195      3 Template:Navigation_menu_2
+ 10.27%    4.847      1 Template:TutorialInfo
+  5.87%    2.770      5 Template:Clear
+  4.73%    2.231      7 Template:ComboBox
+  4.69%    2.213      3 Template:CheckBox
+  3.78%    1.786     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120210146 and revision id 1741707. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120210700 and revision id 1741709. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
