--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -299,11 +299,11 @@
 <li>M&#283;li byste z&iacute;skat v&yacute;sledek, jak je zn&aacute;zorn&#283;no na <b>Obr.: SD2</b></li></ol>
 <p><b><big>Mirrored001</big></b>
 </p>
-<ol><li>Select <b>Pad001</b>.</li>
-<li>Click <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Mirrored</a>:
-<ol><li>Make sure <b>Plane</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vertical sketch axis  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> is selected.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
-<li>You should now have a part that looks like <b>Fig: SD3</b>.</li></ol>
+<ol><li>Vyberte <b>Pad001</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Zrcadlit</a>:
+<ol><li>Ujist&#283;te se, &#382;e je vybr&aacute;na mo&#382;nost <b>Rovina</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vertik&aacute;ln&iacute; osa n&aacute;&#269;rtu  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>.</li>
+<li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
+<li>Nyn&iacute; byste m&#283;li m&iacute;t d&iacute;l, kter&yacute; vypad&aacute; jako na <b>Obr.: SD3</b>.</li></ol>
 <p><b><big>Note</big></b>
 </p><p>Our two mirror operations have a common symmetry plane, so we could have made our model a little simpler by combining them. We would:
 </p>
@@ -409,15 +409,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120210709
+Cached time: 20260120210927
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.270 seconds
-Real time usage: 0.439 seconds
+CPU time usage: 0.240 seconds
+Real time usage: 0.354 seconds
 Preprocessor visited node count: 830/1000000
-Post&#8208;expand include size: 41769/2097152 bytes
-Template argument size: 11575/2097152 bytes
+Post&#8208;expand include size: 41784/2097152 bytes
+Template argument size: 11590/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -425,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.999      1 -total
- 30.19%   14.493      1 Template:Sketcher_Tools_navi/cs
- 19.22%    9.225      1 Template:PartDesign_Tools_navi/cs
- 19.22%    9.224      3 Template:Navigation_menu_2
- 14.38%    6.901      1 Template:Userdocnavi/cs
-  8.02%    3.848      1 Template:TutorialInfo
-  5.21%    2.500      7 Template:ComboBox
-  4.27%    2.049      5 Template:Clear
-  3.79%    1.820     19 Template:Button
-  3.68%    1.767      3 Template:CheckBox
+100.00%   43.904      1 -total
+ 18.42%    8.086      1 Template:PartDesign_Tools_navi/cs
+ 17.32%    7.605      1 Template:Sketcher_Tools_navi/cs
+ 14.73%    6.469      3 Template:Navigation_menu_2
+ 13.11%    5.755      3 Template:CheckBox
+ 12.29%    5.395      1 Template:Userdocnavi/cs
+  9.53%    4.185      1 Template:TutorialInfo
+  5.83%    2.561     19 Template:Button
+  5.55%    2.435      8 Template:KEY
+  5.47%    2.400      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120210709 and revision id 1741709. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120210927 and revision id 1741712. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
