--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -305,10 +305,10 @@
 <li>Klikn&#283;te na <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>Nyn&iacute; byste m&#283;li m&iacute;t d&iacute;l, kter&yacute; vypad&aacute; jako na <b>Obr.: SD3</b>.</li></ol>
 <p><b><big>Pozn&aacute;mka</big></b>
-</p><p>Our two mirror operations have a common symmetry plane, so we could have made our model a little simpler by combining them. We would:
+</p><p>Na&scaron;e dv&#283; zrcadlov&eacute; operace maj&iacute; spole&#269;nou rovinu symetrie, tak&#382;e jsme mohli n&aacute;&scaron; model trochu zjednodu&scaron;it jejich slou&#269;en&iacute;m. Ud&#283;lali bychom n&aacute;sleduj&iacute;c&iacute;:
 </p>
-<ol><li>Omit the first <b>Mirror</b> operation.</li>
-<li>Select both <b>Pad001</b> and <b>Pocket</b> in step 1 of the above <b>Mirrored001</b> operation.</li></ol>
+<ol><li>Vynechte prvn&iacute; operaci <b>Zrcadlen&iacute;</b>.</li>
+<li>V kroku 1 v&yacute;&scaron;e uveden&eacute; operace <b>Mirrored001</b> vyberte <b>Pad001</b> i <b>Pocket</b>.</li></ol>
 <p>This emphasizes the important concept that we are mirroring the selected features (the operations we performed on the body, in the selected order), not the body itself.
 </p>
 <div style="clear:both"></div>
@@ -409,12 +409,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120210939
+Cached time: 20260120211416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.272 seconds
-Real time usage: 0.411 seconds
+CPU time usage: 0.273 seconds
+Real time usage: 0.383 seconds
 Preprocessor visited node count: 830/1000000
 Post&#8208;expand include size: 41784/2097152 bytes
 Template argument size: 11590/2097152 bytes
@@ -425,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.389      1 -total
- 46.09%   22.301      1 Template:Userdocnavi/cs
- 12.09%    5.848      3 Template:Navigation_menu_2
- 11.65%    5.638      1 Template:PartDesign_Tools_navi/cs
-  9.82%    4.753      1 Template:Sketcher_Tools_navi/cs
-  5.75%    2.780      3 Template:CheckBox
-  5.61%    2.716      1 Template:TutorialInfo
-  4.20%    2.032      7 Template:ComboBox
-  4.06%    1.965      8 Template:KEY
-  3.92%    1.898     19 Template:Button
+100.00%   41.380      1 -total
+ 24.05%    9.950      1 Template:PartDesign_Tools_navi/cs
+ 22.59%    9.346      1 Template:Sketcher_Tools_navi/cs
+ 21.77%    9.010      3 Template:Navigation_menu_2
+ 14.52%    6.007      1 Template:Userdocnavi/cs
+  6.83%    2.826      1 Template:TutorialInfo
+  6.06%    2.506      3 Template:CheckBox
+  6.00%    2.484      7 Template:ComboBox
+  4.10%    1.696     19 Template:Button
+  4.06%    1.679      8 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120210938 and revision id 1741714. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211415 and revision id 1741716. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
