Created page with "To zdůrazňuje důležitý koncept, že zrcadlíme vybrané rysy (operace, které jsme provedli na modelu, ve vybraném pořadí), nikoli samotný model."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -309,7 +309,7 @@
 </p>
 <ol><li>Vynechte prvn&iacute; operaci <b>Zrcadlen&iacute;</b>.</li>
 <li>V kroku 1 v&yacute;&scaron;e uveden&eacute; operace <b>Mirrored001</b> vyberte <b>Pad001</b> i <b>Pocket</b>.</li></ol>
-<p>This emphasizes the important concept that we are mirroring the selected features (the operations we performed on the body, in the selected order), not the body itself.
+<p>To zd&#367;raz&#328;uje d&#367;le&#382;it&yacute; koncept, &#382;e zrcadl&iacute;me vybran&eacute; rysy (operace, kter&eacute; jsme provedli na modelu, ve vybran&eacute;m po&#345;ad&iacute;), nikoli samotn&yacute; model.
 </p>
 <div style="clear:both"></div>
 <h2><span class="mw-headline" id="Center_hole">Center hole</span></h2>
@@ -409,12 +409,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120211416
+Cached time: 20260120211525
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.273 seconds
-Real time usage: 0.383 seconds
+CPU time usage: 0.304 seconds
+Real time usage: 0.442 seconds
 Preprocessor visited node count: 830/1000000
 Post&#8208;expand include size: 41784/2097152 bytes
 Template argument size: 11590/2097152 bytes
@@ -425,19 +425,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.380      1 -total
- 24.05%    9.950      1 Template:PartDesign_Tools_navi/cs
- 22.59%    9.346      1 Template:Sketcher_Tools_navi/cs
- 21.77%    9.010      3 Template:Navigation_menu_2
- 14.52%    6.007      1 Template:Userdocnavi/cs
-  6.83%    2.826      1 Template:TutorialInfo
-  6.06%    2.506      3 Template:CheckBox
-  6.00%    2.484      7 Template:ComboBox
-  4.10%    1.696     19 Template:Button
-  4.06%    1.679      8 Template:KEY
+100.00%   56.774      1 -total
+ 22.35%   12.691      1 Template:PartDesign_Tools_navi/cs
+ 18.90%   10.728      1 Template:Sketcher_Tools_navi/cs
+ 16.84%    9.563      3 Template:Navigation_menu_2
+ 13.25%    7.524      1 Template:Userdocnavi/cs
+  8.93%    5.072      1 Template:TutorialInfo
+  7.43%    4.218      3 Template:CheckBox
+  5.97%    3.388      5 Template:Clear
+  5.71%    3.244     19 Template:Button
+  5.37%    3.050      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211415 and revision id 1741716. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211525 and revision id 1741718. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
