Created page with "== Středový otvor =="

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -312,7 +312,9 @@
 <p>To zd&#367;raz&#328;uje d&#367;le&#382;it&yacute; koncept, &#382;e zrcadl&iacute;me vybran&eacute; rysy (operace, kter&eacute; jsme provedli na modelu, ve vybran&eacute;m po&#345;ad&iacute;), nikoli samotn&yacute; model.
 </p>
 <div style="clear:both"></div>
-<h2><span class="mw-headline" id="Center_hole">Center hole</span></h2>
+<p><span id="Center_hole"></span>
+</p>
+<h2><span id="St.C5.99edov.C3.BD_otvor"></span><span class="mw-headline" id="St&#345;edov&yacute;_otvor">St&#345;edov&yacute; otvor</span></h2>
 <p>Now it is time for the most challenging part of our modeling, a challenge that arises because some of the dimensions of the center hole are defined along the slanted face. If you use this face, created by padding <b>Sketch001</b>, as a reference for the next sketch, you expose yourself to the <a href="../Topological_naming_problem.html" title="Topological naming problem">Topological Naming Problem</a>. A better solution is to reference <b>Sketch001</b> itself.
 </p><p><b><big>Sketch004</big></b>
 </p>
@@ -409,13 +411,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120211525
+Cached time: 20260120211548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.304 seconds
-Real time usage: 0.442 seconds
-Preprocessor visited node count: 830/1000000
+CPU time usage: 0.252 seconds
+Real time usage: 0.524 seconds
+Preprocessor visited node count: 831/1000000
 Post&#8208;expand include size: 41784/2097152 bytes
 Template argument size: 11590/2097152 bytes
 Highest expansion depth: 5/100
@@ -425,19 +427,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   56.774      1 -total
- 22.35%   12.691      1 Template:PartDesign_Tools_navi/cs
- 18.90%   10.728      1 Template:Sketcher_Tools_navi/cs
- 16.84%    9.563      3 Template:Navigation_menu_2
- 13.25%    7.524      1 Template:Userdocnavi/cs
-  8.93%    5.072      1 Template:TutorialInfo
-  7.43%    4.218      3 Template:CheckBox
-  5.97%    3.388      5 Template:Clear
-  5.71%    3.244     19 Template:Button
-  5.37%    3.050      7 Template:ComboBox
+100.00%   65.596      1 -total
+ 24.14%   15.834      1 Template:Sketcher_Tools_navi/cs
+ 20.77%   13.626      1 Template:PartDesign_Tools_navi/cs
+ 14.97%    9.820      1 Template:Userdocnavi/cs
+ 13.72%    9.000      3 Template:Navigation_menu_2
+  6.89%    4.522      1 Template:TutorialInfo
+  6.65%    4.361      8 Template:KEY
+  5.57%    3.651      7 Template:ComboBox
+  5.53%    3.630      3 Template:CheckBox
+  5.46%    3.579     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211525 and revision id 1741718. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211547 and revision id 1741720. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
