--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -315,7 +315,7 @@
 <p><span id="Center_hole"></span>
 </p>
 <h2><span id="St.C5.99edov.C3.BD_otvor"></span><span class="mw-headline" id="St&#345;edov&yacute;_otvor">St&#345;edov&yacute; otvor</span></h2>
-<p>Now it is time for the most challenging part of our modeling, a challenge that arises because some of the dimensions of the center hole are defined along the slanted face. If you use this face, created by padding <b>Sketch001</b>, as a reference for the next sketch, you expose yourself to the <a href="../Topological_naming_problem.html" title="Topological naming problem">Topological Naming Problem</a>. A better solution is to reference <b>Sketch001</b> itself.
+<p>Nyn&iacute; nast&aacute;v&aacute; nejn&aacute;ro&#269;n&#283;j&scaron;&iacute; &#269;&aacute;st na&scaron;eho modelov&aacute;n&iacute;, kter&aacute; je obt&iacute;&#382;n&aacute; proto, &#382;e n&#283;kter&eacute; rozm&#283;ry st&#345;edov&eacute;ho otvoru jsou definov&aacute;ny pod&eacute;l &scaron;ikm&eacute; plochy. Pokud pou&#382;ijete tuto plochu, vytvo&#345;enou vypln&#283;n&iacute;m <b>Sketch001</b>, jako referenci pro dal&scaron;&iacute; n&aacute;&#269;rt, vystavujete se <a href="../Topological_naming_problem.html" title="Topological naming problem">topologick&eacute;mu probl&eacute;mu pojmenov&aacute;n&iacute;</a>. Lep&scaron;&iacute;m &#345;e&scaron;en&iacute;m je odkazovat na samotn&yacute; soubor &bdquo;Sketch001&ldquo;.
 </p><p><b><big>Sketch004</big></b>
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_cen01.png&amp;filetimestamp=20221214230205&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_cen01.png" decoding="async" width="240" height="274" class="mw-file-element" data-file-width="249" data-file-height="284"></a><figcaption>Fig: CH1</figcaption></figure>
@@ -411,12 +411,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120211548
+Cached time: 20260120211837
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.252 seconds
-Real time usage: 0.524 seconds
+CPU time usage: 0.280 seconds
+Real time usage: 0.475 seconds
 Preprocessor visited node count: 831/1000000
 Post&#8208;expand include size: 41784/2097152 bytes
 Template argument size: 11590/2097152 bytes
@@ -427,19 +427,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.596      1 -total
- 24.14%   15.834      1 Template:Sketcher_Tools_navi/cs
- 20.77%   13.626      1 Template:PartDesign_Tools_navi/cs
- 14.97%    9.820      1 Template:Userdocnavi/cs
- 13.72%    9.000      3 Template:Navigation_menu_2
-  6.89%    4.522      1 Template:TutorialInfo
-  6.65%    4.361      8 Template:KEY
-  5.57%    3.651      7 Template:ComboBox
-  5.53%    3.630      3 Template:CheckBox
-  5.46%    3.579     19 Template:Button
+100.00%   44.490      1 -total
+ 23.80%   10.589      1 Template:Sketcher_Tools_navi/cs
+ 19.59%    8.714      1 Template:PartDesign_Tools_navi/cs
+ 16.30%    7.253      3 Template:Navigation_menu_2
+ 13.49%    6.000      1 Template:Userdocnavi/cs
+  8.44%    3.754      1 Template:TutorialInfo
+  7.12%    3.170      3 Template:CheckBox
+  5.83%    2.594      7 Template:ComboBox
+  4.67%    2.078     19 Template:Button
+  4.03%    1.794      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211547 and revision id 1741720. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211836 and revision id 1741722. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
