Created page with "# Zobrazte '''Sketch001''' a skryjte '''Sketch''' a '''Mirrored001'''. # Klikněte na [[File:PartDesign_NewSketch.svg|24px|link=PartDesign_NewSketch]] [[PartDesign_NewSketch|Vytvořit náčrt]] a vytvořte nový náčrt připojený k '''Rovině_YZ'''. Náčrt bude pojmenován '''Sketch004'''. # Klikněte na [[File:Sketcher_CreatePolyline.svg|24px|link=Sketcher_CreatePolyline]] [[Sketcher_CreatePolyline|Vytvořit lomenou čáru]] a nakreslete křivku, jak je naznačeno bo..."

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -320,24 +320,24 @@
 </p>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_cen01.png&amp;filetimestamp=20221214230205&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_cen01.png" decoding="async" width="240" height="274" class="mw-file-element" data-file-width="249" data-file-height="284"></a><figcaption>Fig: CH1</figcaption></figure>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Pd_tut_cen02.png&amp;filetimestamp=20221214230226&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_cen02.png" decoding="async" width="240" height="240" class="mw-file-element" data-file-width="330" data-file-height="330"></a><figcaption>Fig: CH2</figcaption></figure>
-<ol><li>Make <b>Sketch001</b> visible, and hide <b>Sketch</b> and <b>Mirrored001</b>.</li>
-<li>Click <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Create sketch</a> and create a new sketch attached to the <b>YZ_Plane</b>. The sketch will be named <b>Sketch004</b>.</li>
-<li>Click <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Create polyline</a> and trace a polyline like that indicated by the points <b>P1</b>, <b>P2</b>, <b>P3</b> and <b>P4</b> in <b>Fig: CH1</b>.</li>
-<li>Remember to close the polyline by picking the first point. This will create the required <span typeof="mw:File"><a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">Coincident constraint</a>.</li>
-<li>Exit the tool.</li>
-<li>Check the applied constraints:
-<ul><li>Delete the redundant <span typeof="mw:File"><a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>  <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertical constraint</a> applied to the line defined by <b>P1</b> and <b>P2</b>.</li>
-<li>Make sure a <span typeof="mw:File"><a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizontal constraint</a> has been applied to the lines defined by <b>P1</b> and <b>P4</b>, and <b>P2</b> and <b>P3</b>.</li>
-<li>Make sure a <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Point onto object constraint</a> has been applied to <b>P1</b> and the <b>Y axis</b>, and to <b>P2</b> and the <b>Y axis</b>.</li></ul></li>
-<li>Click <span typeof="mw:File"><a href="../Sketcher_External.html" title="Sketcher External"><img src="../File/Sketcher_External.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">External geometry</a></li>
-<li>Select the line defined by <b>EGP1</b> and <b>EGP2</b> in <b>Sketch001</b>, indicated by the purple color in <b>Fig: CH2</b>.</li>
-<li>Exit the tool.</li>
-<li>Apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">Point onto object constraint</a> to <b>P3</b> and the <b>external geometry</b>, and repeat this for <b>P4</b>. This will make the line defined by <b>P3</b> and <b>P4</b> coincident with the line defined by <b>EGP1</b> and <b>EGP2</b>.</li>
-<li>Select the line <b>P3</b> to <b>P4</b>, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">Distance constraint</a>, and assign <b>Length = 17 mm</b></li>
-<li>Select the points <b>EGP2</b> and <b>P4</b>, apply a <span typeof="mw:File"><a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">Distance constraint</a>, and assign <b>Length = 7 mm</b>.</li>
-<li>This will result in a fully constrained sketch like <b>Fig: CH2</b>.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span>.</li>
-<li>Hide <b>Sketch001</b>.</li></ol>
+<ol><li>Zobrazte <b>Sketch001</b> a skryjte <b>Sketch</b> a <b>Mirrored001</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a> a vytvo&#345;te nov&yacute; n&aacute;&#269;rt p&#345;ipojen&yacute; k <b>Rovin&#283;_YZ</b>. N&aacute;&#269;rt bude pojmenov&aacute;n <b>Sketch004</b>.</li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline"><img src="../File/Sketcher_CreatePolyline.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Vytvo&#345;it lomenou &#269;&aacute;ru</a> a nakreslete k&#345;ivku, jak je nazna&#269;eno body <b>P1</b>, <b>P2</b>, <b>P3</b> a<b>P4</b> na <b>Obr.: CH1</b>.</li>
+<li>Nezapome&#328;te uzav&#345;&iacute;t k&#345;ivku v&yacute;b&#283;rem prvn&iacute;ho bodu. T&iacute;m se vytvo&#345;&iacute; po&#382;adovan&aacute; <span typeof="mw:File"><a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident"><img src="../File/Sketcher_ConstrainCoincident.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">vazba toto&#382;nosti</a>.</li>
+<li>Ukon&#269;ete n&aacute;stroj.</li>
+<li>Zkontrolujte pou&#382;it&eacute; vazby:
+<ul><li>Odstra&#328;te nadbyte&#269;n&eacute; <span typeof="mw:File"><a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>  <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">vertik&aacute;ln&iacute; vazby</a> aplikov&aacute;n&eacute; na linii definovanou <b>P1</b> a <b>P2</b>.</li>
+<li>Ujist&#283;te se, &#382;e <span typeof="mw:File"><a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">horizont&aacute;ln&iacute; vazba</a> byla pou&#382;ita na linie definovan&eacute; pomoc&iacute; <b>P1</b> a<b>P4</b>, a<b>P2</b> a<b>P3</b>.</li>
+<li>Ujist&#283;te se, &#382;e je na objektu <b>P1</b> a ose <b>Y</b> a na objektu <b>P2</b> a ose <b>Y</b> pou&#382;ito <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">omezen&iacute; bodu na objektu</a>.</li></ul></li>
+<li>Klikn&#283;te na <span typeof="mw:File"><a href="../Sketcher_External.html" title="Sketcher External"><img src="../File/Sketcher_External.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_External.html" title="Sketcher External">Extern&iacute; geometrii</a></li>
+<li>Vyberte linii definovanou <b>EGP1</b> a <b>EGP2</b> ve <b>Sketch001</b>, ozna&#269;eno fialovou barvou na <b>Obr.: CH2</b>.</li>
+<li>Ukon&#269;ete n&aacute;stroj.</li>
+<li>Pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject"><img src="../File/Sketcher_ConstrainPointOnObject.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject">vazbu bodu na objektu</a> na <b>P3</b> a &sbquo;&lsquo;'extern&iacute; geometrii<b>, a opakujte to pro </b>P4<b>. T&iacute;m se linie definovan&aacute; </b>P3<b> a </b>P4<b> shoduje s lini&iacute; definovanou </b>EGP1<b> a </b>EGP2<b>.</b></li>
+<li>Vyberte linii <b>P3</b> a&#382; <b>P4</b>, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">vazbu vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te <b>D&eacute;lka = 17 mm</b>.</li>
+<li>Vyberte body <b>EGP2</b> a <b>P4</b>, pou&#382;ijte <span typeof="mw:File"><a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance"><img src="../File/Sketcher_ConstrainDistance.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">vazbu vzd&aacute;lenosti</a> a p&#345;i&#345;a&#271;te <b>D&eacute;lka = 7 mm</b>.</li>
+<li>V&yacute;sledkem bude pln&#283; zavazben&yacute; n&aacute;&#269;rt, jako je na <b>Obr.: CH2</b>.</li>
+<li>Klikn&#283;te na<span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zav&#345;&iacute;t</span>.</li>
+<li>Skryjte <b>Sketch001</b>.</li></ol>
 <p><b><big>Pocket001</big></b>
 </p>
 <ol><li>Select <b>Sketch004</b>.</li>
@@ -411,15 +411,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120211844
+Cached time: 20260120214227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.267 seconds
-Real time usage: 0.324 seconds
+CPU time usage: 0.240 seconds
+Real time usage: 0.338 seconds
 Preprocessor visited node count: 831/1000000
-Post&#8208;expand include size: 41784/2097152 bytes
-Template argument size: 11590/2097152 bytes
+Post&#8208;expand include size: 41787/2097152 bytes
+Template argument size: 11593/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -427,19 +427,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.917      1 -total
- 18.95%    7.184      1 Template:Sketcher_Tools_navi/cs
- 18.52%    7.023      1 Template:PartDesign_Tools_navi/cs
- 16.96%    6.430      3 Template:Navigation_menu_2
- 15.76%    5.974      1 Template:Userdocnavi/cs
-  7.69%    2.915      1 Template:TutorialInfo
-  6.48%    2.458     19 Template:Button
-  6.15%    2.332      3 Template:CheckBox
-  5.94%    2.253      5 Template:Clear
-  5.86%    2.221      7 Template:ComboBox
+100.00%   44.853      1 -total
+ 21.79%    9.774      1 Template:Sketcher_Tools_navi/cs
+ 19.77%    8.869      1 Template:PartDesign_Tools_navi/cs
+ 17.17%    7.699      3 Template:Navigation_menu_2
+ 13.57%    6.087      1 Template:Userdocnavi/cs
+  8.31%    3.727      1 Template:TutorialInfo
+  7.38%    3.312      3 Template:CheckBox
+  5.80%    2.600      7 Template:ComboBox
+  5.40%    2.423      5 Template:Clear
+  5.24%    2.352     19 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120211844 and revision id 1741722. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120214226 and revision id 1741725. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
