--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -411,12 +411,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120214227
+Cached time: 20260120214236
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.240 seconds
-Real time usage: 0.338 seconds
+CPU time usage: 0.282 seconds
+Real time usage: 0.449 seconds
 Preprocessor visited node count: 831/1000000
 Post&#8208;expand include size: 41787/2097152 bytes
 Template argument size: 11593/2097152 bytes
@@ -427,19 +427,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.853      1 -total
- 21.79%    9.774      1 Template:Sketcher_Tools_navi/cs
- 19.77%    8.869      1 Template:PartDesign_Tools_navi/cs
- 17.17%    7.699      3 Template:Navigation_menu_2
- 13.57%    6.087      1 Template:Userdocnavi/cs
-  8.31%    3.727      1 Template:TutorialInfo
-  7.38%    3.312      3 Template:CheckBox
-  5.80%    2.600      7 Template:ComboBox
-  5.40%    2.423      5 Template:Clear
-  5.24%    2.352     19 Template:Button
+100.00%   43.124      1 -total
+ 23.21%   10.008      1 Template:Sketcher_Tools_navi/cs
+ 19.45%    8.389      1 Template:PartDesign_Tools_navi/cs
+ 16.28%    7.019      3 Template:Navigation_menu_2
+ 11.02%    4.751      1 Template:TutorialInfo
+ 10.21%    4.405      1 Template:Userdocnavi/cs
+  7.27%    3.137      3 Template:CheckBox
+  6.98%    3.011      7 Template:ComboBox
+  4.54%    1.959      8 Template:KEY
+  4.32%    1.864      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120214226 and revision id 1741725. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120214236 and revision id 1741725. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
