--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -349,8 +349,8 @@
 <li>Na kart&#283; Data v <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Editoru vlastnost&iacute;</a> zm&#283;&#328;te vlastnost &bdquo;Refine&ldquo; na &bdquo;True&ldquo;. Editor vlastnost&iacute; najdete na kart&#283; Model v <a href="../Combo_view.html" class="mw-redirect" title="Combo view">Combo View</a>.</li></ol>
 <p><b><big>Pozn&aacute;mky</big></b>
 </p>
-<ol><li>For <b>Pocket001</b> we could have alternatively used <b>Type</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dimension  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>, checked <b>Symmetric to Plane</b>, and entered <b>17 mm</b> for the <b>Length</b> value.</li>
-<li><b>Refine</b> will try to remove seams left by previous operations. It is advisable to only refine the final solid, as some operations can fail if a previous feature has been refined. However, there are also cases where refine can make an operation succeed. So in case of problems check this property and test. Unfortunately there is not yet a general rule to follow.</li></ol>
+<ol><li>Pro' <i>Pocket001'</i> jsme mohli alternativn&#283; pou&#382;&iacute;t <b>Typ</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dimension  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>, za&scaron;krtn&#283;te <b>Symetricky k rovin&#283;</b> a zadejte hodnotu <b>17 mm</b> pro <b>D&eacute;lku</b>.</li>
+<li><b>Vylep&scaron;it</b> se pokus&iacute; odstranit &scaron;vy zanechan&eacute; p&#345;edchoz&iacute;mi operacemi. Doporu&#269;uje se vylep&scaron;ovat pouze fin&aacute;ln&iacute; t&#283;leso, proto&#382;e n&#283;kter&eacute; operace mohou selhat, pokud byl vylep&scaron;en p&#345;edchoz&iacute; prvek. Existuj&iacute; v&scaron;ak tak&eacute; p&#345;&iacute;pady, kdy funkce vylep&scaron;it m&#367;&#382;e zajistit &uacute;sp&#283;&scaron;nost operace. V p&#345;&iacute;pad&#283; probl&eacute;m&#367; proto zkontrolujte tuto vlastnost a prove&#271;te test. Bohu&#382;el zat&iacute;m neexistuje obecn&eacute; pravidlo, kter&yacute;m by se bylo mo&#382;n&eacute; &#345;&iacute;dit.</li></ol>
 <div style="clear:both"></div>
 <h2><span class="mw-headline" id="Result">Result</span></h2>
 <p>The model is complete. It should look like the image below.
@@ -411,12 +411,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120214610
+Cached time: 20260120215056
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.382 seconds
+CPU time usage: 0.262 seconds
+Real time usage: 0.393 seconds
 Preprocessor visited node count: 831/1000000
 Post&#8208;expand include size: 41781/2097152 bytes
 Template argument size: 11587/2097152 bytes
@@ -427,19 +427,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.416      1 -total
- 17.50%    8.475      1 Template:PartDesign_Tools_navi/cs
- 14.17%    6.862      3 Template:Navigation_menu_2
- 13.59%    6.581      1 Template:TutorialInfo
- 13.12%    6.351      1 Template:Sketcher_Tools_navi/cs
- 12.97%    6.281      3 Template:CheckBox
- 11.22%    5.433      1 Template:Userdocnavi/cs
-  8.04%    3.892     19 Template:Button
-  5.87%    2.844      8 Template:KEY
-  5.75%    2.782      7 Template:ComboBox
+100.00%   47.724      1 -total
+ 24.08%   11.493      1 Template:PartDesign_Tools_navi/cs
+ 13.86%    6.616      3 Template:Navigation_menu_2
+ 12.80%    6.109      1 Template:Sketcher_Tools_navi/cs
+ 12.29%    5.866      1 Template:Userdocnavi/cs
+ 10.49%    5.007      1 Template:TutorialInfo
+  7.69%    3.672     19 Template:Button
+  7.52%    3.587      7 Template:ComboBox
+  6.58%    3.138      3 Template:CheckBox
+  4.30%    2.053      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120214610 and revision id 1741730. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215056 and revision id 1741732. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
