Created page with "== Výsledek =="

--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -352,7 +352,9 @@
 <ol><li>Pro' <i>Pocket001'</i> jsme mohli alternativn&#283; pou&#382;&iacute;t <b>Typ</b> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Dimension  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>, za&scaron;krtn&#283;te <b>Symetricky k rovin&#283;</b> a zadejte hodnotu <b>17 mm</b> pro <b>D&eacute;lku</b>.</li>
 <li><b>Vylep&scaron;it</b> se pokus&iacute; odstranit &scaron;vy zanechan&eacute; p&#345;edchoz&iacute;mi operacemi. Doporu&#269;uje se vylep&scaron;ovat pouze fin&aacute;ln&iacute; t&#283;leso, proto&#382;e n&#283;kter&eacute; operace mohou selhat, pokud byl vylep&scaron;en p&#345;edchoz&iacute; prvek. Existuj&iacute; v&scaron;ak tak&eacute; p&#345;&iacute;pady, kdy funkce vylep&scaron;it m&#367;&#382;e zajistit &uacute;sp&#283;&scaron;nost operace. V p&#345;&iacute;pad&#283; probl&eacute;m&#367; proto zkontrolujte tuto vlastnost a prove&#271;te test. Bohu&#382;el zat&iacute;m neexistuje obecn&eacute; pravidlo, kter&yacute;m by se bylo mo&#382;n&eacute; &#345;&iacute;dit.</li></ol>
 <div style="clear:both"></div>
-<h2><span class="mw-headline" id="Result">Result</span></h2>
+<p><span id="Result"></span>
+</p>
+<h2><span id="V.C3.BDsledek"></span><span class="mw-headline" id="V&yacute;sledek">V&yacute;sledek</span></h2>
 <p>The model is complete. It should look like the image below.
 </p><p>Finally, select <b>Sketch</b> in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a> and on the Data tab of the <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Property editor</a> look for <b>Sketch &rarr; Constraints</b>. Expand that node and changed the <b>length</b> and <b>width</b> constraints. The model should change parametrically.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_final_solid.png&amp;filetimestamp=20221106160049&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_final_solid.png" decoding="async" width="350" height="300" class="mw-file-element" data-file-width="350" data-file-height="300"></a></span>
@@ -411,13 +413,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120215056
+Cached time: 20260120215106
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.262 seconds
-Real time usage: 0.393 seconds
-Preprocessor visited node count: 831/1000000
+CPU time usage: 0.248 seconds
+Real time usage: 0.321 seconds
+Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41781/2097152 bytes
 Template argument size: 11587/2097152 bytes
 Highest expansion depth: 5/100
@@ -427,19 +429,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.724      1 -total
- 24.08%   11.493      1 Template:PartDesign_Tools_navi/cs
- 13.86%    6.616      3 Template:Navigation_menu_2
- 12.80%    6.109      1 Template:Sketcher_Tools_navi/cs
- 12.29%    5.866      1 Template:Userdocnavi/cs
- 10.49%    5.007      1 Template:TutorialInfo
-  7.69%    3.672     19 Template:Button
-  7.52%    3.587      7 Template:ComboBox
-  6.58%    3.138      3 Template:CheckBox
-  4.30%    2.053      5 Template:Clear
+100.00%   34.728      1 -total
+ 23.96%    8.319      1 Template:PartDesign_Tools_navi/cs
+ 17.43%    6.053      3 Template:Navigation_menu_2
+ 16.62%    5.773      1 Template:Sketcher_Tools_navi/cs
+ 15.79%    5.484      1 Template:Userdocnavi/cs
+  8.36%    2.904      1 Template:TutorialInfo
+  5.95%    2.065      3 Template:CheckBox
+  5.79%    2.009      8 Template:KEY
+  5.78%    2.006     19 Template:Button
+  5.39%    1.870      7 Template:ComboBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215056 and revision id 1741732. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215106 and revision id 1741734. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
