--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -355,7 +355,7 @@
 <p><span id="Result"></span>
 </p>
 <h2><span id="V.C3.BDsledek"></span><span class="mw-headline" id="V&yacute;sledek">V&yacute;sledek</span></h2>
-<p>The model is complete. It should look like the image below.
+<p>Model je hotov&yacute;. M&#283;l by vypadat jako na obr&aacute;zku n&iacute;&#382;e.
 </p><p>Finally, select <b>Sketch</b> in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a> and on the Data tab of the <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Property editor</a> look for <b>Sketch &rarr; Constraints</b>. Expand that node and changed the <b>length</b> and <b>width</b> constraints. The model should change parametrically.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_final_solid.png&amp;filetimestamp=20221106160049&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_final_solid.png" decoding="async" width="350" height="300" class="mw-file-element" data-file-width="350" data-file-height="300"></a></span>
 </p><p><br>
@@ -413,12 +413,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120215106
+Cached time: 20260120215137
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.248 seconds
-Real time usage: 0.321 seconds
+CPU time usage: 0.263 seconds
+Real time usage: 0.323 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41781/2097152 bytes
 Template argument size: 11587/2097152 bytes
@@ -429,19 +429,19 @@ Unstrip post&#8208;expand size: 2038/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.728      1 -total
- 23.96%    8.319      1 Template:PartDesign_Tools_navi/cs
- 17.43%    6.053      3 Template:Navigation_menu_2
- 16.62%    5.773      1 Template:Sketcher_Tools_navi/cs
- 15.79%    5.484      1 Template:Userdocnavi/cs
-  8.36%    2.904      1 Template:TutorialInfo
-  5.95%    2.065      3 Template:CheckBox
-  5.79%    2.009      8 Template:KEY
-  5.78%    2.006     19 Template:Button
-  5.39%    1.870      7 Template:ComboBox
+100.00%   36.308      1 -total
+ 25.94%    9.419      1 Template:PartDesign_Tools_navi/cs
+ 19.19%    6.969      3 Template:Navigation_menu_2
+ 15.20%    5.519      1 Template:Sketcher_Tools_navi/cs
+ 12.83%    4.658      1 Template:Userdocnavi/cs
+  7.14%    2.594      7 Template:ComboBox
+  6.35%    2.306      5 Template:Clear
+  5.49%    1.992     19 Template:Button
+  5.39%    1.956      1 Template:TutorialInfo
+  5.24%    1.901      3 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215106 and revision id 1741734. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215136 and revision id 1741736. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
