--- a/wiki/cs/Basic_Part_Design_Tutorial_019.html
+++ b/wiki/cs/Basic_Part_Design_Tutorial_019.html
@@ -4,7 +4,7 @@
 <li><a href="../fr/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="PartDesign Tutoriel d'introduction V0.19 (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="Esercitazione di base su Part Design 019 (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--complete" title="Poradnik: Podstawy dla &#347;rodowiska pracy Projekt Cz&#281;&#347;ci 019 (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--low" title="&#1059;&#1088;&#1086;&#1082; &#1087;&#1086; &#1073;&#1072;&#1079;&#1086;&#1074;&#1099;&#1084; &#1074;&#1086;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086;&#1089;&#1090;&#1103;&#1084; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; Part Design 019 (1% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Basic_Part_Design_Tutorial_019.html" class="mw-pt-progress mw-pt-progress--low" title="&#1058;&#1091;&#1090;&#1086;&#1088;&#1110;&#1072;&#1083; &#1079; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1091;&#1074;&#1072;&#1085;&#1085;&#1103; &#1073;&#1072;&#1079;&#1086;&#1074;&#1086;&#1111; &#1076;&#1077;&#1090;&#1072;&#1083;&#1110; 019 (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" style="width: 230px; float: right; margin-left: 1em">
@@ -356,7 +356,7 @@
 </p>
 <h2><span id="V.C3.BDsledek"></span><span class="mw-headline" id="V&yacute;sledek">V&yacute;sledek</span></h2>
 <p>Model je hotov&yacute;. M&#283;l by vypadat jako na obr&aacute;zku n&iacute;&#382;e.
-</p><p>Finally, select <b>Sketch</b> in the <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Tree view</a> and on the Data tab of the <a href="../Property_editor.html" class="mw-redirect" title="Property editor">Property editor</a> look for <b>Sketch &rarr; Constraints</b>. Expand that node and changed the <b>length</b> and <b>width</b> constraints. The model should change parametrically.
+</p><p>Nakonec vyberte <b>Sketch</b> ve <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;m zobrazen&iacute;</a> a na kart&#283; Data v <a href="../Property_editor.html" class="mw-redirect" title="Property editor">editoru vlastnost&iacute;</a> vyhledejte <b>Sketch &rarr; Constraints</b>. Rozbalte tento uzel a zm&#283;&#328;te omezen&iacute; &bdquo;d&eacute;lky&ldquo; a &bdquo;&scaron;&iacute;&#345;ky&ldquo;. Model by se m&#283;l parametricky zm&#283;nit.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Pd_tut_final_solid.png&amp;filetimestamp=20221106160049&amp;.html" class="mw-file-description"><img src="../File/Pd_tut_final_solid.png" decoding="async" width="350" height="300" class="mw-file-element" data-file-width="350" data-file-height="300"></a></span>
 </p><p><br>
 </p>
@@ -413,35 +413,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120215137
+Cached time: 20260120215400
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.263 seconds
-Real time usage: 0.323 seconds
+CPU time usage: 0.297 seconds
+Real time usage: 0.436 seconds
 Preprocessor visited node count: 832/1000000
 Post&#8208;expand include size: 41781/2097152 bytes
 Template argument size: 11587/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2038/5000000 bytes
+Unstrip post&#8208;expand size: 2042/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.308      1 -total
- 25.94%    9.419      1 Template:PartDesign_Tools_navi/cs
- 19.19%    6.969      3 Template:Navigation_menu_2
- 15.20%    5.519      1 Template:Sketcher_Tools_navi/cs
- 12.83%    4.658      1 Template:Userdocnavi/cs
-  7.14%    2.594      7 Template:ComboBox
-  6.35%    2.306      5 Template:Clear
-  5.49%    1.992     19 Template:Button
-  5.39%    1.956      1 Template:TutorialInfo
-  5.24%    1.901      3 Template:CheckBox
+100.00%   53.620      1 -total
+ 23.45%   12.573      1 Template:PartDesign_Tools_navi/cs
+ 20.41%   10.944      1 Template:Sketcher_Tools_navi/cs
+ 16.73%    8.970      1 Template:Userdocnavi/cs
+ 15.78%    8.462      3 Template:Navigation_menu_2
+  6.40%    3.430      1 Template:TutorialInfo
+  5.80%    3.109     19 Template:Button
+  5.66%    3.034      8 Template:KEY
+  5.50%    2.949      7 Template:ComboBox
+  4.29%    2.302      3 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215136 and revision id 1741736. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412046-0!canonical and timestamp 20260120215400 and revision id 1741738. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
